[gd_scene load_steps=2 format=3 uid="uid://dnnliqyvf1p7n"]

[ext_resource type="Script" path="res://Scripts/Debug.gd" id="1_ns401"]

[node name="Debug" type="Node2D"]
z_index = 3
script = ExtResource("1_ns401")

[node name="FramerateLabel" type="Label" parent="."]
offset_left = 1240.0
offset_top = 697.0
offset_right = 1280.0
offset_bottom = 720.0
horizontal_alignment = 2

[node name="BulletCountLabel" type="Label" parent="."]
offset_left = 900.0
offset_top = 672.0
offset_right = 940.0
offset_bottom = 695.0
horizontal_alignment = 2

[node name="MemoryLabel" type="Label" parent="."]
offset_top = 697.0
offset_right = 40.0
offset_bottom = 720.0

[node name="HomingTarget" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
